; ModuleID = '/home/carl/AnghaBench/openssl/providers/implementations/keymgmt/extr_dh_kmgmt.c_dh_importdomparams.c'
source_filename = "/home/carl/AnghaBench/openssl/providers/implementations/keymgmt/extr_dh_kmgmt.c_dh_importdomparams.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i32*)* @dh_importdomparams to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @dh_importdomparams(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = call i8* (...) @DH_new()
  store i8* %6, i8** %5, align 8
  %7 = icmp eq i8* %6, null
  br i1 %7, label %13, label %8

8:                                                ; preds = %2
  %9 = load i8*, i8** %5, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @params_to_domparams(i8* %9, i32* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %16, label %13

13:                                               ; preds = %8, %2
  %14 = load i8*, i8** %5, align 8
  %15 = call i32 @DH_free(i8* %14)
  store i8* null, i8** %5, align 8
  br label %16

16:                                               ; preds = %13, %8
  %17 = load i8*, i8** %5, align 8
  ret i8* %17
}

declare dso_local i8* @DH_new(...) #1

declare dso_local i32 @params_to_domparams(i8*, i32*) #1

declare dso_local i32 @DH_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
